glowmode and level struct

--- a/Apex.vcxproj.filters
+++ b/Apex.vcxproj.filters
@@ -105,7 +105,13 @@
       <Filter>Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="HitboxType.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="GlowMode.hpp">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Level.hpp">
+      <Filter>Header Files\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
