--- a/Apex.vcxproj
+++ b/Apex.vcxproj
@@ -155,7 +155,9 @@
     <ClInclude Include="DMALibrary\Memory\Shellcode.h" />
     <ClInclude Include="DMALibrary\nt\structs.h" />
     <ClInclude Include="DMALibrary\pch.h" />
+    <ClInclude Include="GlowMode.hpp" />
     <ClInclude Include="HitboxType.hpp" />
+    <ClInclude Include="Level.hpp" />
     <ClInclude Include="LocalPlayer.hpp" />
     <ClInclude Include="Matrix.hpp" />
     <ClInclude Include="Offsets.hpp" />
