--- a/Apex.vcxproj.filters
+++ b/Apex.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="Camera.hpp">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
+    <ClInclude Include="Glow.hpp">
+      <Filter>Header Files\Core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
