recoil compensation config

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,7 @@
 AimFOV=10
-AimSmooth=2.0
+AimSmooth=5.0
 AimSmoothMaxIncrease=0.1
+AimRecoilCompensation=1.5
 ResolutionX=2560
 ResolutionY=1440
 FOV=110
