kmbox b+ pro fix (was cosmetic)

--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,7 @@ AimRecoilCompensation=1.5
 ResolutionX=2560
 ResolutionY=1440
 FOV=110
-KmboxType=Net
+KmboxType=BPro
 KmboxIP=192.168.2.188
 KmboxPort=8336
 KmboxUUID=24B75054
