GLOW CRASH FIX. TriggerBot, FlickBot.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/imgui
+/imgui.ini
+/italic.otf
+/bold.otf
+/regular.otf
+/Render.cpp
+/Render.hpp
