--- a/Apex.vcxproj
+++ b/Apex.vcxproj
@@ -131,7 +131,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d12.lib;d3dcompiler.lib;dxgi.lib;Ws2_32.lib;vmm.lib;leechcore.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;dxgi.lib;Ws2_32.lib;vmm.lib;leechcore.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <AdditionalLibraryDirectories>DMALibrary\libs</AdditionalLibraryDirectories>
     </Link>
@@ -144,8 +144,16 @@
     <ClCompile Include="DMALibrary\Memory\Shellcode.cpp" />
     <ClCompile Include="DMALibrary\pch.cpp" />
     <ClCompile Include="Config.hpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="KmboxNet.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Render.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aimbot.hpp" />
@@ -163,6 +171,14 @@
     <ClInclude Include="Glow.hpp" />
     <ClInclude Include="HidTable.hpp" />
     <ClInclude Include="HitboxType.hpp" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="KmboxB.h" />
     <ClInclude Include="KmboxNet.hpp" />
     <ClInclude Include="Level.hpp" />
@@ -172,7 +188,9 @@
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Profiling.hpp" />
     <ClInclude Include="QAngle.hpp" />
+    <ClInclude Include="Render.hpp" />
     <ClInclude Include="Resolver.hpp" />
+    <ClInclude Include="Spectator.hpp" />
     <ClInclude Include="Vector2D.hpp" />
     <ClInclude Include="Vector3D.hpp" />
     <ClInclude Include="Vector4D.hpp" />
