--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,15 @@
+AimSticky=false
 AimFOV=5
 AimSmooth=3.0
 AimSmoothMaxIncrease=0.1
 AimRecoilCompensation=1.5
+AimBotKey=2
+AimTriggerKey=5
+AimFlickKey=6
 ResolutionX=2560
 ResolutionY=1440
 FOV=110
-KmboxType=BPro
+KmboxType=Net
 KmboxIP=192.168.2.188
 KmboxPort=8336
 KmboxUUID=24B75054
