--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,13 @@
 AimSticky=false
-AimFOV=5
-AimSmooth=3.0
-AimSmoothMaxIncrease=0.1
-AimRecoilCompensation=1.5
+AimFOV=5.5
+AimSmooth=2.3
+AimSmoothMaxIncrease=0
+AimRecoilCompensation=1.11
 AimBotKey=2
 AimTriggerKey=5
 AimFlickKey=6
+GlowItem=true
+GlowItemRarity=35
 ResolutionX=2560
 ResolutionY=1440
 FOV=110
