--- a/Apex.vcxproj
+++ b/Apex.vcxproj
@@ -144,8 +144,16 @@
     <ClCompile Include="DMALibrary\Memory\Shellcode.cpp" />
     <ClCompile Include="DMALibrary\pch.cpp" />
     <ClCompile Include="Config.hpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="KmboxNet.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Render.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aimbot.hpp" />
@@ -161,17 +169,28 @@
     <ClInclude Include="DMALibrary\nt\structs.h" />
     <ClInclude Include="DMALibrary\pch.h" />
     <ClInclude Include="Glow.hpp" />
+    <ClInclude Include="GlowMode.hpp" />
     <ClInclude Include="HidTable.hpp" />
     <ClInclude Include="HitboxType.hpp" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="KmboxB.h" />
     <ClInclude Include="KmboxNet.hpp" />
     <ClInclude Include="Level.hpp" />
     <ClInclude Include="LocalPlayer.hpp" />
     <ClInclude Include="Matrix.hpp" />
+    <ClInclude Include="Misc.hpp" />
     <ClInclude Include="Offsets.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Profiling.hpp" />
     <ClInclude Include="QAngle.hpp" />
+    <ClInclude Include="Render.hpp" />
     <ClInclude Include="Resolver.hpp" />
     <ClInclude Include="Spectator.hpp" />
     <ClInclude Include="Vector2D.hpp" />
